--- a/glide.yaml
+++ b/glide.yaml
@@ -4,3 +4,5 @@ import:
   version: ^0.2.14
 - package: github.com/bitly/go-simplejson
   version: ^0.5.0
+- package: github.com/stretchr/testify
+  version: ^1.1.4
