--- a/glide.yaml
+++ b/glide.yaml
@@ -7,3 +7,5 @@ import:
 - package: github.com/jarcoal/httpmock
 - package: github.com/stretchr/testify
   version: ^1.1.4
+- package: gopkg.in/redis.v5
+  version: ^5.2.9
